--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -60,7 +60,7 @@ header .banner-text {
 	width: 100%;
 }
 header .banner-text h1 {
-	font: 90px/1.1em "opensans-bold", sans-serif;
+	font: bold 90px/1.1em "Open Sans", sans-serif;
 	color: #fff;
 	letter-spacing: -2px;
 	margin: 0 auto 18px auto;
@@ -137,7 +137,7 @@ header .scrolldown a:hover {
 
 /* nav-wrap */
 #nav-wrap {
-	font: 12px "opensans-bold", sans-serif;
+	font: bold 12px "Open Sans", sans-serif;
 	width: 100%;
 	text-transform: uppercase;
 	letter-spacing: 2.5px;
@@ -216,7 +216,7 @@ ul#nav li.current a {
 }
 
 #about h2 {
-	font: 22px/30px "opensans-bold", sans-serif;
+	font: bold 22px/30px "Open Sans", sans-serif;
 	color: #fff;
 	margin-bottom: 12px;
 }
@@ -274,7 +274,7 @@ ul#nav li.current a {
 }
 
 #resume h1 {
-	font: 18px/24px "opensans-bold", sans-serif;
+	font: bold 18px/24px "Open Sans", sans-serif;
 	text-transform: uppercase;
 	letter-spacing: 1px;
 }
@@ -283,7 +283,7 @@ ul#nav li.current a {
 	padding-bottom: 6px;
 }
 #resume h3 {
-	font: 25px/30px "opensans-bold", sans-serif;
+	font: bold 25px/30px "Open Sans", sans-serif;
 }
 
 #resume .header-col {
@@ -310,7 +310,7 @@ ul#nav li.current a {
 	margin-left: 5px;
 }
 #resume .date {
-	font: 15px/24px "opensans-regular", sans-serif;
+	font: 15px/24px "Open Sans", sans-serif;
 	margin-top: 6px;
 }
 
@@ -336,7 +336,7 @@ ul#nav li.current a {
 	border-radius: 0px;
 }
 .bars li em {
-	font: 15px "opensans-bold", sans-serif;
+	font: bold 15px "Open Sans", sans-serif;
 	color: #313131;
 	text-transform: uppercase;
 	letter-spacing: 2px;
@@ -455,7 +455,8 @@ ul#nav li.current a {
 	padding-bottom: 60px;
 }
 #portfolio h1 {
-	font: 15px/24px "opensans-semibold", sans-serif;
+	font: 15px/24px "Open Sans", sans-serif;
+	font-weight: 600;
 	text-transform: uppercase;
 	letter-spacing: 1px;
 	text-align: center;
@@ -533,11 +534,11 @@ ul#nav li.current a {
 	padding: 18px;
 }
 .portfolio-item .portfolio-item-meta h5 {
-	font: 14px/21px "opensans-bold", sans-serif;
+	font: bold 14px/21px "Open Sans", sans-serif;
 	color: #fff;
 }
 .portfolio-item .portfolio-item-meta p {
-	font: 12px/18px "opensans-light", sans-serif;
+	font: light 12px/18px "Open Sans", sans-serif;
 	color: #c6c7c7;
 	margin-bottom: 0;
 }
@@ -565,17 +566,17 @@ ul#nav li.current a {
 	padding: 12px 36px 18px 36px;
 }
 .popup-modal .description-box h4 {
-	font: 15px/24px "opensans-bold", sans-serif;
+	font: bold 15px/24px "Open Sans", sans-serif;
 	margin-bottom: 12px;
 	color: #111;
 }
 .popup-modal .description-box p {
-	font: 14px/24px "opensans-regular", sans-serif;
+	font: 14px/24px "Open Sans", sans-serif;
 	color: #a1a1a1;
 	margin-bottom: 12px;
 }
 .popup-modal .description-box .categories {
-	font: 11px/21px "opensans-light", sans-serif;
+	font: light 11px/21px "Open Sans", sans-serif;
 	color: #a1a1a1;
 	text-transform: uppercase;
 	letter-spacing: 2px;
@@ -592,7 +593,7 @@ ul#nav li.current a {
 }
 .popup-modal .link-box a {
 	color: #fff;
-	font: 11px/21px "opensans-bold", sans-serif;
+	font: bold 11px/21px "Open Sans", sans-serif;
 	text-transform: uppercase;
 	letter-spacing: 3px;
 	cursor: pointer;
@@ -635,7 +636,7 @@ ul#nav li.current a {
 	padding-bottom: 48px;
 }
 #call-to-action h1 {
-	font: 18px/24px "opensans-bold", sans-serif;
+	font: bold 18px/24px "Open Sans", sans-serif;
 	text-transform: uppercase;
 	letter-spacing: 3px;
 	color: #fff;
@@ -657,7 +658,7 @@ ul#nav li.current a {
 	margin-top: 12px;
 }
 #call-to-action h2 {
-	font: 28px/36px "opensans-bold", sans-serif;
+	font: bold 28px/36px "Open Sans", sans-serif;
 	color: #ebeeee;
 	margin-bottom: 6px;
 }
@@ -680,7 +681,8 @@ call-to-action .button {
 	color: #0d0d0d;
 }
 #call-to-action p span {
-	font-family: "opensans-semibold", sans-serif;
+	font-family: "Open Sans", sans-serif;
+	font-weight: 600;
 	color: #d8d8d8;
 }
 
@@ -704,7 +706,7 @@ call-to-action .button {
 	padding-bottom: 66px;
 }
 #testimonials h1 {
-	font: 18px/24px "opensans-bold", sans-serif;
+	font: bold 18px/24px "Open Sans", sans-serif;
 	text-transform: uppercase;
 	letter-spacing: 3px;
 	color: #fff;
@@ -797,6 +799,7 @@ call-to-action .button {
 .flexslider .slides > li {
 	display: none;
 	-webkit-backface-visibility: hidden;
+	backface-visibility: hidden;
 }
 /* Suggested container for slide animation setups. Can replace this with your own */
 .flex-container {
@@ -841,7 +844,7 @@ call-to-action .button {
 	margin: 0 6px;
 	display: inline-block;
 	zoom: 1;
-	*display: inline;
+	display: inline;
 }
 .flex-control-paging li a {
 	width: 12px;
@@ -891,7 +894,7 @@ call-to-action .button {
 }
 
 #contact h1 {
-	font: 18px/24px "opensans-bold", sans-serif;
+	font: bold 18px/24px "Open Sans", sans-serif;
 	text-transform: uppercase;
 	letter-spacing: 3px;
 	color: #ebeeee;
@@ -912,12 +915,12 @@ call-to-action .button {
 }
 
 #contact h4 {
-	font: 16px/24px "opensans-bold", sans-serif;
+	font: bold 16px/24px "Open Sans", sans-serif;
 	color: #ebeeee;
 	margin-bottom: 6px;
 }
 #contact p.lead {
-	font: 18px/36px "opensans-light", sans-serif;
+	font: light 18px/36px "Open Sans", sans-serif;
 	padding-right: 3%;
 }
 #contact .header-col {
@@ -929,10 +932,9 @@ call-to-action .button {
 	margin-bottom: 30px;
 }
 #contact label {
-	font: 15px/24px "opensans-bold", sans-serif;
+	font: bold 15px/24px "Open Sans", sans-serif;
 	margin: 12px 0;
 	color: #ebeeee;
-	display: inline-block;
 	float: left;
 	width: 26%;
 }
@@ -1015,7 +1017,7 @@ call-to-action .button {
 	display: block;
 }
 #twitter li b a {
-	font: 13px/36px "opensans-regular", Sans-serif;
+	font: 13px/36px "Open Sans", Sans-serif;
 	color: #474747 !important;
 	border: none;
 }
